--- a/Sources/Coherence/coherence_simple.tex
+++ b/Sources/Coherence/coherence_simple.tex
@@ -151,7 +151,7 @@ demonstrated by the following example.
 
 \cref{eg:2} hints at a shift from \tname contexts to \namee contexts $[[C]]$,
 whose syntax is shown in \cref{fig:contexts}. Due to the bidirectional
-nature of the type system, the typing judgement of $[[C]]$ features 4
+nature of the type system, the typing judgment of $[[C]]$ features 4
 different forms:
 \begin{mathpar}
   [[CC : (GG => A) ~> (GG' => A') ~~> cc]] \and
