--- a/Thesis.bib
+++ b/Thesis.bib
@@ -449,7 +449,7 @@ year		= {2007},
  publisher = {ACM Press/Addison-Wesley Publishing Co.},
 }
 
-@inproceedings{Nystrom:2006:JNI:1167473.1167476,
+@inproceedings{Nystrom:2006,
  author = {Nystrom, Nathaniel and Qi, Xin and Myers, Andrew C.},
  title = {{J\&: Nested Intersection for Scalable Software Composition}},
  booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
@@ -488,7 +488,7 @@ year		= {2007},
   booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
 }
 
-@inproceedings{Qi:2009:SCF:1542476.1542508,
+@inproceedings{Qi:2009,
  author = {Qi, Xin and Myers, Andrew C.},
  title = {Sharing Classes Between Families},
  booktitle = {Conference on Programming Language Design and Implementation},
