--- a/packages.tex
+++ b/packages.tex
@@ -54,7 +54,7 @@
 }
 
 \lstdefinelanguage{sedel}{
-  keywords={this, trait, inherits, super, type, Trait, override, new, if, then, else, let, in, letrec},
+  keywords={Void, Class, All, extends, this, trait, inherits, super, type, Trait, override, new, if, then, else, let, in, letrec},
   identifierstyle=\color{black},
   morecomment=[l]{--},
   morecomment=[l]{//},
